# gd_integration_tools

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  .mutmut-ignore  .mypy-baseline.json  .pids  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  .tmp_sprint19_surgery.py  .vale.ini  .vale.yaml  =6.1  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEEP_AUDIT_REPORT.md  Dockerfile  MEMORY-m2-arg2-extracted.md  Makefile  Makefile.security  PLAN.md  README.md  SPRINT_8_PLAN.md  alembic.ini  app.log.2025-01-30  celerybeat-schedule  close.sh  config.yml  coverage.json  coverage_baseline.json  docker-compose.bluegreen.yml  docker-compose.perf.yml  docker-compose.plugin-dev.yml  docker-compose.windows-worker.yml  docker-compose.yml  entrypoint.sh  (+20 more)
.baselines/: coverage.json  noqa.json  perf.json  startup-time.json
.claude/: CONTEXT.md  DECISIONS.md  KNOWN_ISSUES.md  MEMORY-m2-arg2-extracted.md  REDIS_AUDIT.md  settings.json  settings.local.example.json  sprint11_carryover_analysis.md  team-ownership.toml
.claude/agents/: code-reviewer.md  dead-code-hunter.md  docs-navigator.md  dsl-analyst.md  feature-coordinator.md  integration-contract-reviewer.md  master-developer-prompt.md  runtime-debugger.md  system-analyst.md  verification-runner.md
.claude/audits/: entrypoints_audit.md
.claude/commands/: commit-work.md  compact.md  contract-review.md  dead-code.md  docs-scan.md  dsl-review.md  map.md  plan.md  research.md  review.md  trace.md  upgrade-check.md  verify.md
.claude/docs/: claude-security.md  claude-usage.md
.claude/plans/: sprint16-exploration-analysis.md  sprint16-exploration.md
.claude/rules/: commit-policy.md  dependency-decision.md  online-research.md  operating-mode.md  path-policy.md  refactoring.md  runtime-debug.md  skill-policy.md  subagent-policy.md  verification-policy.md
.claude/scripts/: post-bash-graphify.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: adr-sync.yml  ai-eval-nightly.yml  ai-pr-review.yml  ai_review_script.py  api-fuzz.yml  chaos.yml  ci.yml  docs-publish.yml  docs.yml  lint.yml  perf-gate.yml  perf.yml  release.yml  sbom.yml  security.yml  sprint-health.yml  test.yml  type.yml  zap.yml
.gitlab/ci/: .gitlab-ci.yml  vale-lint.yml
.hermes/plans/: INTEGRATION_SPLIT_AUDIT.md  S38_P0_T-P0_1_3_attempt.md  S38_P0_T-P0_1_4_coverage_gap.md  S38_V23_PLAN.md  (+7 more)
.kimi-code/: config.toml  mcp.json
.mimocode/: audit_dsl_full.md  audit_dsl_processors.md
.security/: cosign.policy.md  pip-audit-allowlist.txt  sbom.policy.md  zap-rules.tsv
.shared/: README.md  mcp-servers.json  permissions.yaml
.vale/: config.yml
analysis/: FINAL_REPORT.md  iteration_1_infra.md  iteration_2_db_services.md  iteration_3_frontend_api.md  iteration_4_dsl_workflow_ai_rpa.md  iteration_5_docs_ci_dead_code_deps.md
app/: __init__.py  main.py  tasks.py  worker.py
backend/: main.py
celery_app/: config.py
config_profiles/: base.yml  dev.yml  dev_light.yml  mcp_clients.yaml  prod.yml  staging.yml
configs/: mcp_clients.yaml
dashboards/: circuit-breaker.json  gd-integration-tools.json  observability-bus-rag-sandbox.json
docs/: .vale.ini  ADMIN_REACT_INTEGRATION.md  AI_INTEGRATION.md  ARCHITECTURAL_AUDIT_V2.md  ARCHITECTURE.md  AUTOAPI.md  CDC_GUIDE.md  DEAD_CODE_AUDIT.md  DEPLOYMENT.md  DEPRECATIONS.md  DEVELOPER_GUIDE.md  DSL_COOKBOOK.md  EXTENSIONS.md  MUTATION_BASELINE.md  MUTATION_TESTING.md  Makefile  PLAN_V9.md  PROCESSORS.md  PROGRESS.md  PROJECT_FINAL_SUMMARY.md  PROJECT_RECOMMENDATIONS.md  QUICKSTART.md  RAG_INGEST.md  RPA_GUIDE.md  SECURITY_AUDIT.md  SECURITY_VULNS_2026-06-05.md  SPRINT_171_M24_CLOSE.md  SPRINT_171_M25_CLOSE.md  SPRINT_171_SCORECARD.md  VULTURE_AUDIT.md  backends.md  clone-baseline.json  conf.py  index.md  index.rst  m11_deferred_tests.md
extensions/: __init__.py
frontend/: main.py  utils.py
gap-analysis/: FEATRE-ROADMAP.md  GAP-анализ gd_integration_tools актуальный.md
gd_advanced_tools/: celery.py  main.py
make/: agent.mk  codegen.mk  docker.mk  docs.mk  formatting.mk  git.mk  k5.mk  maintenance.mk  pipelines.mk  prod.mk  profiling.mk  quality.mk  quickwins.mk  runtime.mk  security.mk  setup.mk  v11.mk
migrations/: env.py
plugins/: __init__.py
post-v22-backlog/: .gitkeep  m-c-encryption.md
prometheus/: prometheus.yml
routes/: README.md
scripts/: audit.sh  blue_green.sh  check_compat.py  check_layers.py  claude_session_start.sh  codemod_pendulum.py  ingest_docs_to_rag.py  manage.sh  pip_audit_gate.py  refactor_setup_page.py  remove_syspath.py  run_mutation_tests.sh  verify_d5_migration_readiness.sh
src/: main.py
testkit/: __init__.py  _route_adapter.py  auth_fixtures.py  chaos_fixtures.py  mtls_fixtures.py  pytest_plugin.py  recorder.py  replay.py  route_runner.py
tests/: conftest.py
tools/: DSL-TOOLS.md  add_docstrings.py  api_fuzz_runner.py  audit_silent_excepts.py  audit_stdlib_logging.py  benchmark_dsl_compile.py  build_adr_index.py  build_adr_wiki.py  changelog_autogen.py  check_adr_collisions.py  check_adr_link.py  check_audit_deprecation.py  check_auth_coverage.py  check_compat.py  check_coverage_gate.py  check_deps_matrix.py  check_docstrings.py  check_docstrings_allowlist.txt  check_dsn_drivers.py  check_env_example.py  check_fallback_matrix.py  check_feature_flags.py  check_layer_imports.py  check_layers.py  check_layers_allowlist.txt  check_mcp_export.py  check_no_tests.py  check_phase_commit.py  check_phase_order.py  check_plugin_system.py  check_protocol_coverage.py  check_secrets_simple.py  check_side_effects.py  check_streamlit_deprecations.py  check_streamlit_security.py  check_team_ownership.py  check_test_baseline.py  check_test_baseline_allowlist.txt  check_v11_artefacts.py  check_waf_coverage.py  (+64 more)
vault/: benchmark-2026-05-15-granian.md  benchmark-2026-05-15-structlog.md  session-2026-05-20-1525-sprint11-closure-summary.md  session-2026-05-20-1528-summary.md  session-2026-05-20-1540-summary.md  session-2026-05-20-1549-summary.md  session-2026-05-20-1625-sprint12-summary.md  session-2026-05-21-1748-summary.md
(+6351 files in other folders)
