[project]
name = "gd_advanced_tools"
version = "0.1.0"
description = "GD Integration Tools — интеграционная шина на Python 3.14"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    { name = "crazyivan1289", email = "crazyivan1289@gmail.com" }
]
dependencies = [
    "fastapi>=0.116.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic[email]>=2.10.3,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "alembic>=1.13.3,<2.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "fastapi-filter>=2.0.0,<3.0.0",
    "python-multipart>=0.0.18",
    "sqladmin>=0.20.1,<1.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "aiohttp>=3.12.14",
    "aiosmtplib>=3.0.2,<4.0.0",
    "sqlalchemy-utils>=0.41.2,<1.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "starlette-exporter>=0.23.0,<1.0.0",
    "fastapi-limiter>=0.1.6,<1.0.0",
    "pandas>=2.2.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "sqlalchemy-continuum>=1.4.2,<2.0.0",
    "zeep>=4.3.1,<5.0.0",
    "hvac>=2.3.0,<3.0.0",
    "opentelemetry-api>=1.30.0,<2.0.0",
    "opentelemetry-sdk>=1.30.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0,<2.0.0",
    "opentelemetry-instrumentation-aiokafka>=0.51b0",
    "opentelemetry-instrumentation-aio-pika>=0.51b0",
    "opentelemetry-instrumentation-pymongo>=0.51b0",
    "opentelemetry-instrumentation-grpc>=0.51b0",
    "aiocircuitbreaker>=2.0.0,<3.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "faststream[kafka]>=0.5.34,<1.0.0",
    "aiokafka>=0.12.0,<1.0.0",
    "grpcio>=1.70.0,<2.0.0",
    "protobuf>=5.29.3,<6.0.0",
    "prefect>=3.2.7,<4.0.0",
    "aio-pika>=9.5.5,<10.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "fastapi-pagination>=0.12.34,<1.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "orjson>=3.11.8,<4.0.0",
    "diskcache>=5.6.3,<6.0.0",
    "strawberry-graphql[fastapi]>=0.262.0",
    "jmespath>=1.0.1,<2.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "lxml>=5.3.0,<6.0.0",
    "watchfiles>=1.0.0,<2.0.0",
    "structlog>=24.4.0,<25.0.0",
    "redis>=5.0.0,<6.0.0",
    "aiomqtt>=2.0.0,<3.0.0",
    "aioimaplib>=1.0.0,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "grpc-interceptor>=0.15.4,<1.0.0",
    "svcs>=25.1.0",
    "httpx[http2]>=0.28.0,<1.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "cbor2>=5.6.0,<6.0.0",
    "xmltodict>=0.14.0,<1.0.0",
    "qdrant-client>=1.12.0,<2.0.0",
    "fastembed>=0.4.0,<1.0.0",
    "granian>=2.0.0",
    "msgspec>=0.18.0,<1.0.0",
    "uvloop>=0.21.0,<1.0.0",
    "cloudevents>=1.10.0,<2.0.0",
    "fastavro>=1.9.0,<2.0.0",
    "casbin>=1.36.0,<2.0.0",
    "polars>=1.20.0,<2.0.0",
    "pyarrow>=20.0.0",
    "cachetools>=5.3.0,<8.0.0"
]

[project.optional-dependencies]
ai = [
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.3.0",
    "langfuse>=2.0.0",
    "ollama>=0.3.0",
    "tavily-python>=0.5.0"
]
security = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0"
]
mcp = [
    "fastmcp>=2.0.0"
]
rpa = [
    "playwright>=1.48.0"
]
iot = []
web3 = []
legacy = []
banking = []
enterprise = []
datalake = []
temporal = []
beam = []

[dependency-groups]
dev = [
    "mypy>=1.20.1,<2.0.0",
    "py-spy>=0.4.0,<1.0.0",
    "grpcio-tools>=1.70.0,<2.0.0",
    "ruff>=0.15.10,<1.0.0",
    "sphinx>=9.1.0,<10.0.0",
    "sphinx-autoapi>=3.3.2,<4.0.0",
    "pydata-sphinx-theme>=0.16.0,<1.0.0",
    "myst-parser>=5.0.0,<6.0.0",
    "schemathesis>=4.15.2,<5.0.0",
    "python-semantic-release>=10.5.3,<11.0.0",
    "detect-secrets>=1.5.0,<2.0.0",
    "creosote>=5.2.0,<6.0.0",
    "vulture>=2.14,<3.0.0",
    "pydeps>=3.0.1,<4.0.0",
    "bandit[toml]>=1.7.10,<2.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# src/ устанавливается как пакет `src`, чтобы все импорты были `from src.X import Y`.
# В Docker: COPY src ./src + PYTHONPATH=/app — так же работает `from src.X`.
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["src/entrypoints/grpc/protobuf/.*"]
check_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = [
    "no-untyped-def",
    "override",
    "arg-type",
    "assignment",
    "import-untyped",
    "union-attr",
    "var-annotated",
    "call-arg",
    "call-overload"
]
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "app.entrypoints.grpc.protobuf.*"
ignore_errors = true


[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [
    "src/entrypoints/grpc/protobuf/*"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = [
    "E501",
    "S104"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true


[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = false
commit_author = "Korch Ivan <cards25kk.bank>"


[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"


[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]
